--- a/lib/otp/Makefile.am
+++ b/lib/otp/Makefile.am
@@ -12,6 +12,7 @@ otptest_LDADD = libotp.la \
 include_HEADERS = otp.h
 
 lib_LTLIBRARIES = libotp.la
+libotp_la_LDFLAGS = -version-info 0:0:0
 
 libotp_la_SOURCES = \
 	otp.c \
