--- a/lib/roken/Makefile.am
+++ b/lib/roken/Makefile.am
@@ -5,6 +5,7 @@ include $(top_srcdir)/Makefile.am.common
 CLEANFILES = roken.h make-roken.c print_version.h
 
 lib_LTLIBRARIES = libroken.la
+libroken_la_LDFLAGS = -version-info 0:0:0
 
 noinst_PROGRAMS = make-roken make-print-version
 
