correct path to Makefile.am.common LDADD: add missing backslash
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5634 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/push/Makefile.am
+++ b/appl/push/Makefile.am
@@ -1,6 +1,6 @@
 # $Id$
 
-include $(top_srcdir)/Makefile.am.common
+include $(top_srcdir)/cf/Makefile.am.common
 
 INCLUDES += $(INCLUDE_krb4) $(HESIODINCLUDE)
 
@@ -23,5 +23,5 @@ EXTRA_DIST = pfrom.in $(man_MANS)
 LDADD = $(LIB_krb5) \
 	$(LIB_krb4) \
 	$(top_builddir)/lib/des/libdes.la \
-	$(top_builddir)/lib/roken/libroken.la
+	$(top_builddir)/lib/roken/libroken.la \
 	$(HESIODLIB)
