correct path to Makefile.am.common
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5638 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/test/Makefile.am
+++ b/appl/test/Makefile.am
@@ -1,6 +1,6 @@
 # $Id$
 
-include $(top_srcdir)/Makefile.am.common
+include $(top_srcdir)/cf/Makefile.am.common
 
 noinst_PROGRAMS = tcp_client tcp_server gssapi_server gssapi_client \
 	uu_server uu_client
