--- a/appl/Makefile.am
+++ b/appl/Makefile.am
@@ -1,6 +1,6 @@
 # $Id$
 
-include $(top_srcdir)/Makefile.am.common
+include $(top_srcdir)/cf/Makefile.am.common
 
 SUBDIRS = afsutil ftp login @OTP_dir@ popper push rsh telnet test
 DIST_SUBDIRS = afsutil ftp login otp popper push rsh telnet test
