--- a/include/kadm5/Makefile.am
+++ b/include/kadm5/Makefile.am
@@ -1,5 +1,5 @@
 # $Id$
 
-include $(top_srcdir)/Makefile.am.common
+include $(top_srcdir)/cf/Makefile.am.common
 
 CLEANFILES = admin.h kadm5_err.h private.h
