(daemon, innetgr): add prototypes
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5642 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/roken.h.in
+++ b/lib/roken/roken.h.in
@@ -272,6 +272,15 @@ int initgroups(const char *name, gid_t basegid);
 int fchown(int fd, uid_t owner, gid_t group);
 #endif
 
+#ifndef HAVE_DAEMON
+int daemon(int nochdir, int noclose);
+#endif
+
+#ifndef HAVE_INNETGR
+int innetgr(const char *netgroup, const char *machine, 
+	    const char *user, const char *domain);
+#endif
+
 #ifndef HAVE_CHOWN
 int chown(const char *path, uid_t owner, gid_t group);
 #endif
