correct path to Makefile.am.common
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5644 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/kafs/Makefile.am
+++ b/lib/kafs/Makefile.am
@@ -1,6 +1,6 @@
 # $Id$
 
-include $(top_srcdir)/Makefile.am.common
+include $(top_srcdir)/cf/Makefile.am.common
 
 INCLUDES += $(INCLUDE_krb4) -DLIBDIR=\"$(libdir)\" $(AFS_EXTRA_DEFS)
 
