(gethostname): remove duplicate
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5649 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/configure.in
+++ b/configure.in
@@ -334,7 +334,7 @@ fi
 AC_SUBST(DBLIB)dnl
 
 AC_CHECK_FUNCS(_getpty _scrsize asnprintf asprintf fcntl)
-AC_CHECK_FUNCS(gethostname getlogin)
+AC_CHECK_FUNCS(getlogin)
 AC_CHECK_FUNCS(getmsg getrlimit getspnam getspuid gettimeofday getuid)
 AC_CHECK_FUNCS(grantpt innetgr mktime ptsname rand random)
 AC_CHECK_FUNCS(revoke select setitimer setlogin setpcred setpgid)
