fix broken checkin
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5652 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/com_err/Makefile.am
+++ b/lib/com_err/Makefile.am
@@ -1,10 +1,11 @@
 # $Id$
 
-include $(top_srcdir)/cf/Makefile.am.common
+include $(top_srcdir)/Makefile.am.common
 
 YFLAGS = -d
 
 lib_LTLIBRARIES = libcom_err.la
+libcom_err_la_LDFLAGS = -version-info 1:0:0
 
 bin_PROGRAMS = compile_et
 
