--- a/lib/kadm5/Makefile.am
+++ b/lib/kadm5/Makefile.am
@@ -1,6 +1,6 @@
 # $Id$
 
-include $(top_srcdir)/cf/Makefile.am.common
+include $(top_srcdir)/Makefile.am.common
 
 lib_LTLIBRARIES = libkadm5srv.la libkadm5clnt.la
 libkadm5srv_la_LDFLAGS = -version-info 1:0:0
