better handling of otp
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5668 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/Makefile.am
+++ b/appl/Makefile.am
@@ -2,6 +2,8 @@
 
 include $(top_srcdir)/Makefile.am.common
 
-SUBDIRS = afsutil ftp login @OTP_dir@ popper push rsh telnet test
-DIST_SUBDIRS = afsutil ftp login otp popper push rsh telnet test
+if OTP
+dir_otp = otp
+endif
+SUBDIRS = afsutil ftp login $(dir_otp) popper push rsh telnet test
 # kauth kx
