--- a/cf/Makefile.am.common
+++ b/cf/Makefile.am.common
@@ -10,9 +10,6 @@ CFLAGS += $(WFLAGS)
 
 COMPILE_ET = $(top_builddir)/lib/com_err/compile_et
 
-## ugly hack for brokenness in automake, you can't install built
-## headers via _HEADERS, and you can't install _DATA in includedir.
-
 ## set build_HEADERZ to headers that should just be installed in build tree
 
 buildinclude = $(top_builddir)/include
@@ -30,6 +27,14 @@ LIB_tgetent = @LIB_tgetent@
 
 HESIODLIB = @HESIODLIB@
 HESIODINCLUDE = @HESIODINCLUDE@
+INCLUDE_hesoid = @INCLUDE_hesoid@
+LIB_hesoid = @LIB_hesoid@
+
+INCLUDE_krb4 = @INCLUDE_krb4@
+LIB_krb4 = @LIB_krb4@
+
+INCLUDE_readline = @INCLUDE_readline@
+LIB_readline = @LIB_readline@
 
 LEXLIB = @LEXLIB@
 
