LIBDIR is defined in config.h
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5672 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/kafs/Makefile.am
+++ b/lib/kafs/Makefile.am
@@ -2,7 +2,7 @@
 
 include $(top_srcdir)/Makefile.am.common
 
-INCLUDES += $(INCLUDE_krb4) -DLIBDIR=\"$(libdir)\" $(AFS_EXTRA_DEFS)
+INCLUDES += $(INCLUDE_krb4) $(AFS_EXTRA_DEFS)
 
 if KRB4
 AFSLIBS = libkafs.la
