--- a/configure.in
+++ b/configure.in
@@ -56,7 +56,7 @@ AC_TEST_PACKAGE(krb4,krb.h,libkrb.a,-lkrb,/usr/athena)
 
 LIB_kdb=
 if test "$with_krb4"; then
-	LIB_kdb=-lkdb
+	LIB_kdb="$LIB_krb4 -lkdb"
 	EXTRA_LIB45=lib45.a
 	AC_SUBST(EXTRA_LIB45)
 	AC_CACHE_CHECK(for four valued krb_put_int, ac_cv_func_krb_put_int_four,
