(install_build_headers): try to make it work better when list of headers is empty.  handle make rewriting the filenames.
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5706 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/cf/Makefile.am.common
+++ b/cf/Makefile.am.common
@@ -63,8 +63,12 @@ install-suid-programs:
 install-exec-hook: install-suid-programs
 
 install-build-headers::
-	@foo='$(include_HEADERS) $(build_HEADERZ)'; \
+	@foo='$(include_HEADERS)'; \
+	if test -n "$(build_HEADERZ)"; then \
+		foo="$$foo $(build_HEADERZ)"; \
+	fi; \
 	for f in $$foo; do \
+		f=`basename $$f`; \
 		if test -f "$(srcdir)/$$f"; then file="$(srcdir)/$$f"; \
 		else file="$$f"; fi; \
 		if cmp -s  $$file $(buildinclude)/$$f 2> /dev/null ; then \
