(install_build_headers): recover from make rewriting the names of the headers kludge to help solaris make
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5708 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/kadm5/Makefile.am
+++ b/lib/kadm5/Makefile.am
@@ -17,6 +17,7 @@ kadm5include_HEADERS = kadm5_err.h admin.h private.h
 install-build-headers::
 	@foo='$(kadm5include_HEADERS)'; \
 	for f in $$foo; do \
+		f=`basename $$f`; \
 		if test -f "$(srcdir)/$$f"; then file="$(srcdir)/$$f"; \
 		else file="$$f"; fi; \
 		if cmp -s  $$file $(buildkadm5include)/$$f 2> /dev/null ; then \
@@ -102,3 +103,7 @@ CLEANFILES = kadm5_err.c kadm5_err.h
 $(libkadm5srv_la_OBJECTS): kadm5_err.h
 
 client_glue.lo server_glue.lo: $(srcdir)/common_glue.c
+
+# to help stupid solaris make
+
+kadm5_err.h: kadm5_err.et
