--- a/lib/sl/Makefile.am
+++ b/lib/sl/Makefile.am
@@ -10,19 +10,27 @@ lib_LTLIBRARIES = libsl.la libss.la
 libsl_la_LDFLAGS = -version-info 0:0:0
 libss_la_LDFLAGS = -version-info 0:0:0
 
-libsl_la_SOURCES = sl_locl.h sl.c roken_rename.h strtok_r.c snprintf.c
+RENAME_SRC = roken_rename.h strtok_r.c snprintf.c
+
+libsl_la_SOURCES = sl_locl.h sl.c
 libss_la_SOURCES = $(libsl_la_SOURCES) ss.c ss.h
+
+EXTRA_libsl_la_SOURCES = strtok_r.c snprintf.c roken_rename.h
 
 # install these?
 
 noinst_PROGRAMS = mk_cmds
 
-mk_cmds_SOURCES = make_cmds.c make_cmds.h parse.y lex.l snprintf.c
+mk_cmds_SOURCES = make_cmds.c make_cmds.h parse.y lex.l
+
+RENAME_mk_cmds_SRC = roken_rename.h snprintf.c
+
+EXTRA_mk_cmds_SOURCES = snprintf.c roken_rename.h
 
 ssincludedir = $(includedir)/ss
 ssinclude_HEADERS = ss.h
 
-CLEANFILES = lex.c parse.c parse.h
+CLEANFILES = lex.c parse.c parse.h snprintf.c strtok_r.c
 
 $(mk_cmds_OBJECTS): parse.h
 
