sys/ioccom.h: test for
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5732 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/configure.in
+++ b/configure.in
@@ -200,7 +200,7 @@ AC_CHECK_HEADERS(netinet/in6_machtypes.h netinet/in_systm.h)
 AC_CHECK_HEADERS(netinet/ip.h netinet/tcp.h netinfo/ni.h netinet6/in6.h paths.h pty.h pwd.h)
 AC_CHECK_HEADERS(io.h resolv.h)
 AC_CHECK_HEADERS(rpcsvc/dbm.h sac.h sgtty.h shadow.h signal.h stropts.h)
-AC_CHECK_HEADERS(sys/bitypes.h sys/file.h sys/filio.h sys/ioctl.h)
+AC_CHECK_HEADERS(sys/bitypes.h sys/file.h sys/filio.h sys/ioccom.h sys/ioctl.h)
 AC_CHECK_HEADERS(sys/param.h sys/proc.h sys/pty.h sys/ptyio.h)
 AC_CHECK_HEADERS(sys/ptyvar.h sys/resource.h sys/select.h)
 AC_CHECK_HEADERS(sys/socket.h sys/sockio.h sys/stat.h sys/stream.h)
