(kdestroy_LDADD, klist_LDADD): more libraries
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5734 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/kuser/Makefile.am
+++ b/kuser/Makefile.am
@@ -22,10 +22,14 @@ kauth_LDADD = \
 	$(top_builddir)/lib/asn1/libasn1.la \
 	$(top_builddir)/lib/roken/libroken.la
 
-kinit_LDADD = $(kauth_LDADD)
+kinit_LDADD	= $(kauth_LDADD)
+
+kdestroy_LDADD	= $(kauth_LDADD)
+
+kuser_LDADD	= $(kauth_LDADD)
 
 LDADD = \
 	$(top_builddir)/lib/krb5/libkrb5.la \
-	$(top_builddir)/lib/des/libdes.la \
-	$(top_builddir)/lib/asn1/libasn1.la \
-	$(top_builddir)/lib/roken/libroken.la
+ 	$(top_builddir)/lib/des/libdes.la \
+ 	$(top_builddir)/lib/asn1/libasn1.la \
+ 	$(top_builddir)/lib/roken/libroken.la
