(install-build-headers): simplify loop
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5745 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/cf/Makefile.am.common
+++ b/cf/Makefile.am.common
@@ -63,10 +63,7 @@ install-suid-programs:
 install-exec-hook: install-suid-programs
 
 install-build-headers::
-	@foo='$(include_HEADERS)'; \
-	if test -n "$(build_HEADERZ)"; then \
-		foo="$$foo $(build_HEADERZ)"; \
-	fi; \
+	@foo='$(include_HEADERS) $(build_HEADERZ)'; \
 	for f in $$foo; do \
 		f=`basename $$f`; \
 		if test -f "$(srcdir)/$$f"; then file="$(srcdir)/$$f"; \
