--- a/configure.in
+++ b/configure.in
@@ -191,7 +191,7 @@ AC_HEADER_STDC
 
 AC_CHECK_HEADERS(arpa/ftp.h arpa/inet.h arpa/nameser.h arpa/telnet.h )
 AC_CHECK_HEADERS(bsdsetjmp.h crypt.h)
-AC_CHECK_HEADERS(curses.h db.h dbm.h dirent.h err.h errno.h)
+AC_CHECK_HEADERS(curses.h db_185.h db.h dbm.h dirent.h err.h errno.h)
 AC_CHECK_HEADERS(fcntl.h fnmatch.h grp.h inttypes.h limits.h)
 AC_CHECK_HEADERS(maillock.h ndbm.h)
 AC_CHECK_HEADERS(net/if.h netdb.h)
