(pfrom): fix typo
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5748 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/push/Makefile.am
+++ b/appl/push/Makefile.am
@@ -11,7 +11,7 @@ libexec_PROGRAMS	= push
 push_SOURCES = push.c push_locl.h
 
 pfrom: pfrom.in
-	sed -e "s!%libexecdir!$(libexecdir)!" $(srcdir)/pfrom.in > $@
+	sed -e "s!%libexecdir%!$(libexecdir)!" $(srcdir)/pfrom.in > $@
 	chmod +x $@
 
 man_MANS = push.8
