--- a/source/include/config.h.in
+++ b/source/include/config.h.in
@@ -169,6 +169,7 @@
 #undef BROKEN_NISPLUS_INCLUDE_FILES
 #undef HAVE_RPC_AUTH_ERROR_CONFLICT
 #undef HAVE_EXPLICIT_LARGEFILE_SUPPORT
+#undef USE_BOTH_CRYPT_CALLS
 
 /* The number of bytes in a int.  */
 #undef SIZEOF_INT
@@ -694,6 +695,12 @@
 
 /* Define if you have the <net/if.h> header file.  */
 #undef HAVE_NET_IF_H
+
+/* Define if you have the <netinet/in_ip.h> header file.  */
+#undef HAVE_NETINET_IN_IP_H
+
+/* Define if you have the <netinet/in_systm.h> header file.  */
+#undef HAVE_NETINET_IN_SYSTM_H
 
 /* Define if you have the <netinet/tcp.h> header file.  */
 #undef HAVE_NETINET_TCP_H
