--- a/lib/roken/Makefile.am
+++ b/lib/roken/Makefile.am
@@ -10,7 +10,9 @@ libroken_la_LDFLAGS = -version-info 0:0:0
 noinst_PROGRAMS = make-roken make-print-version
 
 if KRB5
-make_print_version_LDADD += $(LIB_krb4)
+## need to link with des here; otherwise, if krb4 is shared the link
+## will fail with unresolved references
+make_print_version_LDADD += $(LIB_krb4) -ldes
 endif
 
 libroken_la_SOURCES =		\
