--- a/appl/login/Makefile.am
+++ b/appl/login/Makefile.am
@@ -5,7 +5,7 @@ include $(top_srcdir)/Makefile.am.common
 INCLUDES += $(INCLUDE_krb4)
 
 bin_PROGRAMS = login
-login_SOURCES = login.c read_string.c utmp_login.c utmpx_login.c \
+login_SOURCES = login.c osfc2.c read_string.c utmp_login.c utmpx_login.c \
 	tty.c stty_default.c login_locl.h
 
 
