--- a/configure.in
+++ b/configure.in
@@ -134,6 +134,8 @@ fi
 AC_SUBST(LIB_otp)
 AM_CONDITIONAL(OTP, test "$otp" = yes)dnl
 
+AC_CHECK_OSFC2
+
 new_des3_code=no
 AC_ARG_ENABLE(new-des3-code,
 [  --enable-new-des3-code to make new key-deriving des3 the default],
@@ -190,7 +192,7 @@ dnl Checks for header files.
 AC_HEADER_STDC
 
 AC_CHECK_HEADERS(arpa/ftp.h arpa/inet.h arpa/nameser.h arpa/telnet.h )
-AC_CHECK_HEADERS(bsdsetjmp.h crypt.h)
+AC_CHECK_HEADERS(bind/bitypes.h bsdsetjmp.h crypt.h)
 AC_CHECK_HEADERS(curses.h db_185.h db.h dbm.h dirent.h err.h errno.h)
 AC_CHECK_HEADERS(fcntl.h fnmatch.h grp.h inttypes.h limits.h)
 AC_CHECK_HEADERS(maillock.h ndbm.h)
@@ -199,7 +201,7 @@ AC_CHECK_HEADERS(netinet/in.h netinet/in6.h netinet/in6_var.h)
 AC_CHECK_HEADERS(netinet/in6_machtypes.h netinet/in_systm.h)
 AC_CHECK_HEADERS(netinet/ip.h netinet/tcp.h netinfo/ni.h netinet6/in6.h paths.h pty.h pwd.h)
 AC_CHECK_HEADERS(io.h resolv.h)
-AC_CHECK_HEADERS(rpcsvc/dbm.h sac.h sgtty.h shadow.h signal.h stropts.h)
+AC_CHECK_HEADERS(rpcsvc/dbm.h sac.h sgtty.h shadow.h siad.h signal.h stropts.h)
 AC_CHECK_HEADERS(sys/bitypes.h sys/file.h sys/filio.h sys/ioccom.h sys/ioctl.h)
 AC_CHECK_HEADERS(sys/param.h sys/proc.h sys/pty.h sys/ptyio.h)
 AC_CHECK_HEADERS(sys/ptyvar.h sys/resource.h sys/select.h)
@@ -295,6 +297,11 @@ AC_CHECK_FUNCS(setsid setsockopt sigaction strstr)
 AC_CHECK_FUNCS(sysconf sysctl timegm ttyname ttyslot umask uname)
 AC_CHECK_FUNCS(unlockpt vasnprintf vasprintf vhangup)
 AC_CHECK_FUNCS(yp_get_default_domain)
+
+AC_CHECK_GETPWNAM_R_POSIX
+
+dnl Cray stuff
+AC_CHECK_FUNCS(getudbnam setlim)
 
 AC_TYPE_SIGNAL
 if test "$ac_cv_type_signal" = "void" ; then
@@ -621,6 +628,8 @@ fi
 dnl AC_SUBST(STREAMSPTY)
 AC_MSG_RESULT($krb_cv_sys_streamspty)
 
+AC_AUTH_MODULES
+
 dnl This is done by AC_OUTPUT but we need the result here.
 
 test "x$prefix" = xNONE && prefix=$ac_default_prefix
@@ -649,6 +658,8 @@ AC_OUTPUT(Makefile 			\
 	include/kadm5/Makefile		\
 	lib/Makefile			\
 	lib/45/Makefile			\
+	lib/auth/Makefile		\
+	lib/auth/sia/Makefile		\
 	lib/asn1/Makefile		\
 	lib/com_err/Makefile		\
 	lib/des/Makefile		\
