--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -92,7 +92,7 @@ QUOTAOBJS=@QUOTAOBJS@
 
 LIB_OBJ = lib/charcnv.o lib/charset.o lib/debug.o lib/fault.o \
           lib/getsmbpass.o lib/interface.o lib/kanji.o lib/md4.o \
-          lib/membuffer.o lib/netmask.o lib/pidfile.o lib/replace.o \
+          lib/netmask.o lib/pidfile.o lib/replace.o \
           lib/signal.o lib/slprintf.o lib/system.o lib/doscalls.o lib/time.o \
 	  lib/ufc.o lib/genrand.o lib/username.o lib/access.o lib/smbrun.o \
 	  lib/bitmap.o lib/crc32.o lib/snprintf.o \
