CFLAGS -> AM_CFLAGS
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5808 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/cf/Makefile.am.common
+++ b/cf/Makefile.am.common
@@ -6,9 +6,7 @@ SUFFIXES = .et .h
 
 INCLUDES = -I$(top_builddir)/include
 
-## bug/feature in Automake 1.4, CFLAGS isn't set until everything else
-## is done
-CFLAGS = @CFLAGS@ $(WFLAGS)
+AM_CFLAGS += $(WFLAGS)
 
 COMPILE_ET = $(top_builddir)/lib/com_err/compile_et
 
