--- a/source3/include/config.h.in
+++ b/source3/include/config.h.in
@@ -109,6 +109,7 @@
 #undef HAVE_SET_AUTH_PARAMETERS
 #undef WITH_MMAP
 #undef WITH_SYSLOG
+#undef WITH_PROFILE
 #undef WITH_SSL
 #undef WITH_LDAP
 #undef WITH_NISPLUS
@@ -636,6 +637,9 @@
 /* Define if you have the <memory.h> header file.  */
 #undef HAVE_MEMORY_H
 
+/* Define if you have the <mysql.h> header file.  */
+#undef HAVE_MYSQL_H
+
 /* Define if you have the <ndir.h> header file.  */
 #undef HAVE_NDIR_H
 
@@ -785,9 +789,6 @@
 
 /* Define if you have the <utime.h> header file.  */
 #undef HAVE_UTIME_H
-
-/* Define if you have the <mysql.h> header file.  */
-#undef HAVE_MYSQL_H
 
 /* Define if you have the dl library (-ldl).  */
 #undef HAVE_LIBDL
