--- a/Makefile.am.common
+++ b/Makefile.am.common
@@ -7,8 +7,29 @@ SUFFIXES += .x
 .x.c:
 	@cmp -s $< $@ 2> /dev/null || cp $< $@
 
+CHECK_LOCAL = $(PROGRAMS)
+
 check-local::
-	@foo='$(bin_PROGRAMS) $(libexec_PROGRAMS) $(sbin_PROGRAMS)'; \
-	for i in $$foo; do \
-	if ./$$i --help > /dev/null 2>&1; then :; \
-	else echo "*** $$i failed check ***"; fi; done
+	@foo='$(CHECK_LOCAL)'; \
+	  if test "$$foo"; then \
+	  failed=0; all=0; \
+	  for i in $$foo; do \
+	    all=`expr $$all + 1`; \
+	    if ./$$i --version > /dev/null 2>&1; then \
+	      echo "PASS: $$i"; \
+	    else \
+	      echo "FAIL: $$i"; \
+	      failed=`expr $$failed + 1`; \
+	    fi; \
+	  done; \
+	  if test "$$failed" -eq 0; then \
+	    banner="All $$all tests passed"; \
+	  else \
+	    banner="$$failed of $$all tests failed"; \
+	  fi; \
+	  dashes=`echo "$$banner" | sed s/./=/g`; \
+	  echo "$$dashes"; \
+	  echo "$$banner"; \
+	  echo "$$dashes"; \
+	  test "$$failed" -eq 0; \
+	fi
