don't run check-local
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5820 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/ftp/ftpd/Makefile.am
+++ b/appl/ftp/ftpd/Makefile.am
@@ -6,6 +6,8 @@ INCLUDES += -I$(srcdir)/../common $(INCLUDE_krb4) -DFTP_SERVER
 
 libexec_PROGRAMS = ftpd
 
+CHECK_LOCAL = 
+
 if KRB4
 krb4_sources = krb4.c kauth.c
 endif
