--- a/appl/telnet/telnet/Makefile.am
+++ b/appl/telnet/telnet/Makefile.am
@@ -6,6 +6,8 @@ INCLUDES += -I$(srcdir)/..
 
 bin_PROGRAMS = telnet
 
+CHECK_LOCAL = 
+
 telnet_SOURCES  = authenc.c commands.c main.c network.c ring.c \
 		  sys_bsd.c telnet.c terminal.c \
 		  utilities.c defines.h externs.h ring.h telnet_locl.h types.h
