lib/auth/{afskauthlib,pam}
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5844 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/configure.in
+++ b/configure.in
@@ -659,6 +659,8 @@ AC_OUTPUT(Makefile 			\
 	lib/Makefile			\
 	lib/45/Makefile			\
 	lib/auth/Makefile		\
+	lib/auth/afskauthlib/Makefile	\
+	lib/auth/pam/Makefile		\
 	lib/auth/sia/Makefile		\
 	lib/asn1/Makefile		\
 	lib/com_err/Makefile		\
