make it compile w/o krb4
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5859 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/auth/sia/Makefile.am
+++ b/lib/auth/sia/Makefile.am
@@ -13,7 +13,7 @@ DEFS = @DEFS@
 ## link with non-installed libraries
 
 L =					\
-	$(top_builddir)/lib/kafs/.libs/libkafs.a	\
+	$(LIB_kafs)					\
 	$(top_builddir)/lib/krb5/.libs/libkrb5.a	\
 	$(top_builddir)/lib/asn1/.libs/libasn1.a	\
 	$(LIB_krb4)					\
