--- a/lib/roken/Makefile.am
+++ b/lib/roken/Makefile.am
@@ -9,10 +9,12 @@ libroken_la_LDFLAGS = -version-info 0:0:0
 
 noinst_PROGRAMS = make-roken make-print-version
 
+if KRB4
 if KRB5
 ## need to link with des here; otherwise, if krb4 is shared the link
 ## will fail with unresolved references
 make_print_version_LDADD += $(LIB_krb4) -ldes
+endif
 endif
 
 libroken_la_SOURCES =		\
