--- a/appl/push/Makefile.in
+++ b/appl/push/Makefile.in
@@ -9,13 +9,13 @@ VPATH = @srcdir@
 CC = @CC@
 LINK = @LINK@
 RANLIB = @RANLIB@
-DEFS = @DEFS@ @HESIODINCLUDE@
+DEFS = @DEFS@ @INCLUDE_hesiod@
 CFLAGS = @CFLAGS@ $(WFLAGS)
 WFLAGS = @WFLAGS@
 LD_FLAGS = @LD_FLAGS@
 INSTALL = @INSTALL@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
-LIBS = @HESIODLIB@ @LIBS@
+LIBS = @LIB_hesiod@ @LIBS@
 LIB_DBM = @LIB_DBM@
 MKINSTALLDIRS = @top_srcdir@/mkinstalldirs
 
